Phase 6 completion: Full-stack enterprise features across all services